z-index fixes

--- a/src/componentStyles/ChoreList.css
+++ b/src/componentStyles/ChoreList.css
@@ -1,3 +1,8 @@
+.choreListContainer {
+  position: relative;
+  z-index: -5;
+}
+
 .resetContainer {
   text-align: center;
   padding: 15px 15px 10px 15px;
@@ -7,7 +12,7 @@
 }
 
 .choreContainer {
-  background: rgba(185, 233, 254, 1);
+  background: #ceeffe;
   margin-top: 1px;
   margin-bottom: 1px;
   z-index: -5;
